--- a/getir/Info.plist
+++ b/getir/Info.plist
@@ -27,6 +27,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Konumuzu belirleyebilmemiz için lokasyon izni vermeniz gerekmektedir.</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Konumuzu belirleyebilmemiz için lokasyon izni vermeniz gerekmektedir.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
